--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/portfolio/main.jpg" alt="">
+      <img class="masthead-avatar mb-5" src="img/portfolio/main.JPG" alt="">
 
       <!-- Masthead Heading -->
       
