--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <!-- Masthead -->
   <header class="masthead bg-primary text-white text-center">
-    <div class="a"></div>
+    <div class="a" style="width:100%;"></div>
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
